# athena-workflow-marketplace

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  package.json  skills-lock.json
.athena-workflow/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
agents/: browser-use.md  navigator-agent.md  playwright-test-writer.md  test-case-generator.md  test-writer.md  web-recorder.md
docs/: e2e-test-builder-audit-2026-04-10.md  robot-automation-refinement-2026-04-11.md  robot-automation-refinement-plan-2026-04-11.md  skills-compatibility.md  test-workflow-hardening-2026-04-20.md  workflow-md-rubric.md
evals/: FINDINGS-2026-05-02.md  README.md  __main__.py  cli.py  config.py  logging_setup.py  pyproject.toml
evals/evaluators/: __init__.py  base.py  compliance_check.py  security_scan.py
evals/events/: models.py  projections.py  store.py
evals/events/migrations/: 0001_init.sql
evals/extraction/: discoverer.py  extractor.py  frontmatter.py
evals/github/: client.py  models.py  ratelimit.py
evals/reporter/: jsonl.py  markdown.py  table.py
evals/scoring/: composite.py  weights.py
evals/seeds/: loader.py  registries.yaml
evals/tests/: conftest.py  test_compliance_check.py  test_discoverer.py  test_dispatcher.py  test_evaluator_base.py  test_event_store.py  test_extractor.py  test_frontmatter.py  test_github_client.py  test_github_ratelimit.py  test_reporter.py  test_scoring.py  test_security_scan.py
evals/tests/fixtures/github/: repo_active.json
evals/tests/fixtures/skills/: good.md
evals/workers/: dispatcher.py  pool.py
hooks/: hooks.json
scripts/: build-plugin-artifacts.mjs  bump-versions.sh  marketplace-cli  (+13 more)
(+408 files in other folders)
